# chip8

./: .clang-tidy  .clangd  .gdb_history  .gdbinit  .gitignore  CMakeLists.txt
.cache/clangd/index/: boot.cpp.70E2E8BF2D9ED1AE.idx  chip8.cpp.CBB671CD73373674.idx  chip8.hpp.65BB99D046C4BFFA.idx  config.hpp.C8BF963D0DBCD1D7.idx  default_font.hpp.656A222FD00551A1.idx
includes/chip8/: chip8.hpp  config.hpp  default_font.hpp  default_keymap.hpp
includes/display/: display.hpp  pixel_pos.hpp
includes/instr/: instr.hpp
src/: CMakeLists.txt  boot.cpp
src/chip8/: CMakeLists.txt  chip8.cpp
src/display/: CMakeLists.txt  display.cpp
test/: CMakeLists.txt  test.cpp
